Small nits in Document Conventions -- BZ#613863
git-svn-id: file:///srv/svn/publican/trunk@1417 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/as-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/as-IN/Conventions.po
@@ -114,14 +114,14 @@ msgstr "আদেশ চলাবলৈ <keycap>Enter</keycap> টিপক । 
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
 "প্ৰথম বাৰ্চুৱেল টাৰ্মিনেললৈ যাবলৈ <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
-"keycap><keycap>F1</keycap></keycombo> টিপক । আপোনাৰ X-Windows অধিবেশনলৈ "
-"যাবলৈ <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</"
+"keycap><keycap>F2</keycap></keycombo> টিপক । আপোনাৰ X-Windows অধিবেশনলৈ "
+"যাবলৈ <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
 "keycap></keycombo> টিপক । "
 
 #. Tag: para
@@ -395,7 +395,7 @@ msgstr "গুৰুত্বপূৰ্ণ"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "গুৰুত্বপূৰ্ণ বাকছত সহজে এৰি যোৱা বস্তুৰ বিৱৰণ থাকে: অকল বৰ্ত্তমানৰ অধিবেশনত প্ৰভাৱ "
