--- a/publican/datadir/Common_Content/common/ast-ES/Conventions.po
+++ b/publican/datadir/Common_Content/common/ast-ES/Conventions.po
@@ -116,14 +116,14 @@ msgstr "Calque <keycap>Enter</keycap> pa executar el comandu."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Calque <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Calque <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> pa saltar a la primer terminal virtual. Calque "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> pa volver a la so sesión de X-Windows."
 
 #. Tag: para
@@ -402,7 +402,7 @@ msgstr "Importante"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Les Caxes Importantes detallen coses que son cencielles de perder: los "
