--- a/publican/datadir/Common_Content/common/bg-BG/Conventions.po
+++ b/publican/datadir/Common_Content/common/bg-BG/Conventions.po
@@ -113,14 +113,14 @@ msgstr "Натиснете <keycap>Enter</keycap>, за да изпълните 
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Натиснете <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Натиснете <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo>, за да превключите на първия виртуалнен терминал. "
-"Натиснете <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</"
+"Натиснете <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
 "keycap></keycombo>, за да се върнете до X-Windows сесията."
 
 #. Tag: para
@@ -402,7 +402,7 @@ msgstr "Важно"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Кутиите с \"Важно!\" съобщение напомнят събития, които са лесно пропускани: "
