--- a/publican/datadir/Common_Content/common/bs-BA/Conventions.po
+++ b/publican/datadir/Common_Content/common/bs-BA/Conventions.po
@@ -51,8 +51,8 @@ msgstr "Pritisnite <keycap>Enter</keycap> za izvršavanje naredbe."
 
 #. Tag: para
 #, no-c-format
-msgid "Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> to switch to the first virtual terminal. Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> to return to your X-Windows session."
-msgstr "Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> za prebacivanje u prvi virtuelni terminal. Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> za vraćanje u X-Windows sesiju."
+msgid "Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo> to switch to the first virtual terminal. Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> to return to your X-Windows session."
+msgstr "Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo> za prebacivanje u prvi virtuelni terminal. Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> za vraćanje u X-Windows sesiju."
 
 #. Tag: para
 #, no-c-format
@@ -211,7 +211,7 @@ msgstr "Bilješka je savjet ili prečica ili alternativan pristup trenutnom zada
 
 #. Tag: para
 #, no-c-format
-msgid "Important boxes detail things that are easily missed: configuration changes that only apply to the current session, or services that need restarting before an update will apply. Ignoring a box labeled 'Important' won't cause data loss but may cause irritation and frustration."
+msgid "Important boxes detail things that are easily missed: configuration changes that only apply to the current session, or services that need restarting before an update will apply. Ignoring a box labeled 'Important' will not cause data loss but may cause irritation and frustration."
 msgstr "Važni okviri detaljno opisuju stvari koje se teško primjete: izmjene u podešavanjima koje se odnose samo na tekuću sesiju, ili servise koje treba ponovo pokrenuti prije nego što ažuriranje pređe u djelovanje. Zanemarivanje važnih okvira neće izazvati gubitak podataka ali može izazvati iritaciju i frustraciju. "
 
 #~ msgid "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal through a menu and its sub-menus. This avoids difficult-to-follow phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the <guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> menu of the main menu bar&#39;."
