--- a/publican/datadir/Common_Content/common/de-DE/Conventions.po
+++ b/publican/datadir/Common_Content/common/de-DE/Conventions.po
@@ -120,14 +120,14 @@ msgstr "Drücken Sie <keycap>Enter</keycap>, um den Befehl auszuführen."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Drücken Sie <keycombo><keycap>Strg</keycap><keycap>Alt</keycap><keycap>F1</"
+"Drücken Sie <keycombo><keycap>Strg</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo>, um zum ersten virtuellen Terminal zu wechseln. Drücken "
-"Sie <keycombo><keycap>Strg</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"Sie <keycombo><keycap>Strg</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo>, um zu Ihrer X-Windows-Sitzung zurückzukehren."
 
 #. Tag: para
@@ -403,7 +403,7 @@ msgstr "Wichtig"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Die Wichtig-Schaukästen lenken die Aufmerksamkeit auf Dinge, die sonst leicht "
