--- a/publican/datadir/Common_Content/common/es-ES/Conventions.po
+++ b/publican/datadir/Common_Content/common/es-ES/Conventions.po
@@ -117,14 +117,14 @@ msgstr "Pulse <keycap>Enter</keycap> para ejecutar el comando."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Pulse <keycombo><keycap>Control</keycap><keycap>Alt</keycap><keycap>F1</"
+"Pulse <keycombo><keycap>Control</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> para cambiar a la primera terminal virtual. Pulse "
-"<keycombo><keycap>Control</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Control</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> para volver a su sesión de Ventanas-X."
 
 #. Tag: para
@@ -395,7 +395,7 @@ msgstr "Importante"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Los cuadros con el título de importante dan detalles de cosas que se pueden pasar por alto "
