--- a/publican/datadir/Common_Content/common/fi-FI/Conventions.po
+++ b/publican/datadir/Common_Content/common/fi-FI/Conventions.po
@@ -113,14 +113,14 @@ msgstr "Paina <keycap>Enter</keycap>-näppäintä komennon suorittamiseksi."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Paina <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Paina <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> ensimmäiseen virtuaalipäätteeseen siirtymiseksi. Paina "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> X-ikkunointi-istuntoon palaamiseksi."
 
 #. Tag: para
@@ -397,7 +397,7 @@ msgstr "Tärkeää"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Tärkeää-laatikot kertovat tarkkoja tietoja asioista, jotka on helppoa "
