--- a/publican/datadir/Common_Content/common/fr-FR/Conventions.po
+++ b/publican/datadir/Common_Content/common/fr-FR/Conventions.po
@@ -111,14 +111,14 @@ msgstr "Appuyer sur <keycap>Enter</keycap> (entrer) pour exécuter la commande."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Appuyer sur <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Appuyer sur <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> pour passer au premier terminal virtuel. Appuyer sur "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> pour retourner à votre session X-Windows."
 
 #. Tag: para
@@ -353,7 +353,7 @@ msgstr "Important"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr "Les cases d'informations importantes détaillent des éléments qui pourraient être facilement négligés : des changements de configurations qui s'appliquent uniquement à la session actuelle, ou des services qui ont besoin d'être redémarrés avant toute mise à jour. Si vous ignorez une case étiquettée 'Important', vous ne perdrez aucunes données mais cela pourrait être source de frustration et d'irritation."
 
