--- a/publican/datadir/Common_Content/common/gu-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/gu-IN/Conventions.po
@@ -114,14 +114,14 @@ msgstr "આદેશને ચલાવવા માટે <keycap>Enter</keycap
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
 "પહેલા વર્ચ્યુલ ટર્મિનલમાં ફેરબદલ માટે <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
-"keycap><keycap>F1</keycap></keycombo> દબાવો. તમારી X-વિન્ડો સત્રો ને પાછા લાવવા "
-"માટે <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"keycap><keycap>F2</keycap></keycombo> દબાવો. તમારી X-વિન્ડો સત્રો ને પાછા લાવવા "
+"માટે <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> દબાવો."
 
 #. Tag: para
@@ -390,7 +390,7 @@ msgstr "મહત્વનું"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "મહત્વનાં બોક્સો માહિતી વસ્તુઓ જે કે સહેલાઇથી ગુમ થયેલ છે: રૂપરેખાંકન બદલાવો કે જે ફક્ત "
