--- a/publican/datadir/Common_Content/common/hi-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/hi-IN/Conventions.po
@@ -119,14 +119,14 @@ msgstr "<keycap>Enter</keycap> को कमांड को चलाने क
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></"
 "keycombo> को पहले आभासी टर्मिनल में जाने के लिए दबाएँ. <keycombo><keycap>Ctrl</"
-"keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> को अपने X-Windows "
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> को अपने X-Windows "
 "सत्र में वापस लौटने के लिए दबाएँ."
 
 #. Tag: para
@@ -391,7 +391,7 @@ msgstr "महत्वपूर्ण"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "महत्वपूर्ण बाक्स उन चीजों को विस्तार से बताता है जो आसानी से भूले जा सकते हैं: "
