--- a/publican/datadir/Common_Content/common/hr-HR/Conventions.po
+++ b/publican/datadir/Common_Content/common/hr-HR/Conventions.po
@@ -51,8 +51,8 @@ msgstr "Pritisnite <keycap>Enter</keycap> za izvršenje naredbe."
 
 #. Tag: para
 #, no-c-format
-msgid "Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> to switch to the first virtual terminal. Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> to return to your X-Windows session."
-msgstr "Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> za prebacivanje u prvi virtualni terminal. Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> za vraćanje u svoju X-Windows sesiju."
+msgid "Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo> to switch to the first virtual terminal. Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> to return to your X-Windows session."
+msgstr "Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo> za prebacivanje u prvi virtualni terminal. Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> za vraćanje u svoju X-Windows sesiju."
 
 #. Tag: para
 #, no-c-format
@@ -156,7 +156,7 @@ msgstr "Ispis sa terminala i programski kod obično su izdvojeni od teksta koji 
 
 #. Tag: para
 #, no-c-format
-msgid "Important boxes detail things that are easily missed: configuration changes that only apply to the current session, or services that need restarting before an update will apply. Ignoring a box labeled 'Important' won't cause data loss but may cause irritation and frustration."
+msgid "Important boxes detail things that are easily missed: configuration changes that only apply to the current session, or services that need restarting before an update will apply. Ignoring a box labeled 'Important' will not cause data loss but may cause irritation and frustration."
 msgstr "Kućice sa oznakom 'Važno' daju opširnije detalje koje nije lako zapaziti: promjene u konfiguracijama koje se odnose na trenutnu sesiju ili servisi koje treba ponovno pokrenuti nakon ažuriranja. Ignoriranje ovih poruka neće završiti gubitkom podataka, ali može biti iritirajuće ili frustrirajuće."
 
 #. Tag: para
