--- a/publican/datadir/Common_Content/common/hu-HU/Conventions.po
+++ b/publican/datadir/Common_Content/common/hu-HU/Conventions.po
@@ -114,14 +114,14 @@ msgstr "Nyomjon <keycap>Enter</keycap>t a parancs végrehajtásához."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Nyomjon <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Nyomjon <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo>-et az első látszólagos terminálra váltáshoz. Nyomjon "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo>-et az X-Window munkamenetbe visszatéréshez."
 
 #. Tag: para
@@ -399,7 +399,7 @@ msgstr "Fontos"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "A fontos dobozok könnyen kihagyható részleteket taglalnak: beállítás "
