--- a/publican/datadir/Common_Content/common/is-IS/Conventions.po
+++ b/publican/datadir/Common_Content/common/is-IS/Conventions.po
@@ -116,14 +116,14 @@ msgstr "Ýttu á <keycap>Enter</keycap> til að framkvæma skipunina."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Ýttu á <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Ýttu á <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> til að skipta yfir á fyrsta sýndarskjáinn. Ýttu á "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> til að snúa til baka í X-Windows setuna þar sem þú varst."
 
 #. Tag: para
@@ -405,7 +405,7 @@ msgstr "Mikilvægt"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Mikilvægir reitir lýsa hlutum sem auðvelt er að missa af: til dæmis "
