--- a/publican/datadir/Common_Content/common/it-IT/Conventions.po
+++ b/publican/datadir/Common_Content/common/it-IT/Conventions.po
@@ -110,14 +110,14 @@ msgstr "Premere <keycap>Invio</keycap> per eseguire il comando."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Premere <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Premere <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> per smistarsi sul primo virtual terminal. Premere "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> per ritornare alla sessione X-Windows."
 
 #. Tag: para
@@ -387,7 +387,7 @@ msgstr "Importante"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Le caselle 'importante' riportano informazioni che potrebbero passare facilmente "
