--- a/publican/datadir/Common_Content/common/ko-KR/Conventions.po
+++ b/publican/datadir/Common_Content/common/ko-KR/Conventions.po
@@ -118,14 +118,14 @@ msgstr "<keycap>Enter</keycap> 키를 눌러 명령을 실행합니다. "
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></"
 "keycombo>을 눌러 첫번째 가상 터미널로 전환합니다. <keycombo><keycap>Ctrl</"
-"keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo>을 눌러 X-윈도우 세"
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo>을 눌러 X-윈도우 세"
 "션으로 돌아갑니다. "
 
 #. Tag: para
@@ -388,7 +388,7 @@ msgstr "중요"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "중요 상자에서는 현재 세션에만 적용되는 설정을 변경하거나 업데이트를 적용하기 "
