--- a/publican/datadir/Common_Content/common/mr-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/mr-IN/Conventions.po
@@ -110,14 +110,14 @@ msgstr "आदेश चालविण्याकरीता <keycap>Enter</k
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
 "प्रथम आभासी टर्मिनलवर जाण्याकरीता <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
-"keycap><keycap>F1</keycap></keycombo> दाबा. X-Windows सत्रकडे "
-"जाण्याकरीता<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</"
+"keycap><keycap>F2</keycap></keycombo> दाबा. X-Windows सत्रकडे "
+"जाण्याकरीता<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
 "keycap></keycombo> दाबा ."
 
 #. Tag: para
@@ -369,7 +369,7 @@ msgstr "महत्वाचे"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr "महत्वाच्या बॉक्सेजमध्ये सहज न आढळणाऱ्या बाबचे समावेश आहे: संरचना बदल जे फक्त सध्याच्या सत्रकरीता लागू होतात, किंवा सेवा ज्यांस सुधारणापूर्वी पुनः सुरू करणे आवश्यक आहे लागू केले जातात. 'महत्वाचे' असे लेबल केलेल्या बॉक्सकडे दुर्लक्ष केल्यास डाटा नाहीसा होत नाही परंतु त्रास नक्की होतो."
 
