--- a/publican/datadir/Common_Content/common/nb-NO/Conventions.po
+++ b/publican/datadir/Common_Content/common/nb-NO/Conventions.po
@@ -114,14 +114,14 @@ msgstr "Trykk <keycap>Enter</keycap> for å kjøre kommandoen."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Trykk <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Trykk <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> for å bytte til den første virtuelle terminalen. Trykk "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> for å returnere til X-Windows sesjonen din."
 
 #. Tag: para
@@ -401,7 +401,7 @@ msgstr "Viktig"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Viktige bokser beskriver i detalj ting som er lett å overse: Forandringer i "
