--- a/publican/datadir/Common_Content/common/nl-NL/Conventions.po
+++ b/publican/datadir/Common_Content/common/nl-NL/Conventions.po
@@ -122,15 +122,15 @@ msgstr "Druk op <keycap>Enter</keycap> om het commando uit te voeren."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
 "Druk op <keycombo> <keycap>Ctrl</keycap> <keycap>Alt</keycap> "
-"<keycap>F1</keycap> </keycombo> om naar de eerste virtuele terminal over te "
+"<keycap>F2</keycap> </keycombo> om naar de eerste virtuele terminal over te "
 "schakelen. Druk op <keycombo> <keycap>Ctrl</keycap> <keycap>Alt</keycap> "
-"<keycap>F7</keycap> </keycombo> om terug te keren naar jouw X-Windows "
+"<keycap>F1</keycap> </keycombo> om terug te keren naar jouw X-Windows "
 "sessie."
 
 #. Tag: para
@@ -414,7 +414,7 @@ msgstr "Belangrijk"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Belangrijk aanduidingen wijzen op zaken die makkelijk over het hoofd kunnen "
