--- a/publican/datadir/Common_Content/common/or-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/or-IN/Conventions.po
@@ -117,15 +117,15 @@ msgstr "ଏହି ନିର୍ଦ୍ଦେଶକୁ ନିଷ୍ପାଦନ କ
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
 "ପ୍ରଥମ ଆଭାସୀ ଟର୍ମିନାଲକୁ ସ୍ଥାନାନ୍ତରିତ ହେବା ପାଇଁ <keycombo><keycap>Ctrl</keycap> "
-"<keycap>Alt</keycap><keycap>F1</keycap></keycombo> କୁ ଦବାନ୍ତୁ।"
+"<keycap>Alt</keycap><keycap>F2</keycap></keycombo> କୁ ଦବାନ୍ତୁ।"
 "ଆପଣଙ୍କର X-ୱିଣ୍ଡୋ ଅଧିବେଶନକୁ ଫେରିବା ପାଇଁ <keycombo><keycap>Ctrl</keycap> "
-"<keycap>Alt</keycap><keycap>F7</keycap></keycombo> କୁ ଦବାନ୍ତୁ।"
+"<keycap>Alt</keycap><keycap>F1</keycap></keycombo> କୁ ଦବାନ୍ତୁ।"
 
 #. Tag: para
 #, no-c-format
@@ -394,7 +394,7 @@ msgstr "ଗୁରୁତ୍ବପୂର୍ଣ୍ଣ"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "ଆବଶ୍ୟକୀୟ ବାକ୍ସ ବିବରଣୀ ବସ୍ତୁ ଯାହାକୁକି ସହଜରେ ହରାଇହେବ: ବିନ୍ୟାସ ପରିବର୍ତ୍ତନ "
