--- a/publican/datadir/Common_Content/common/pl-PL/Conventions.po
+++ b/publican/datadir/Common_Content/common/pl-PL/Conventions.po
@@ -113,14 +113,14 @@ msgstr "Proszę nacisnąć klawisz <keycap>Enter</keycap>, aby wykonać poleceni
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Naciśnięcie <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Naciśnięcie <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> przełączy na pierwszy terminal wirtualny. Naciśnięcie "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> powróci do sesji X Window."
 
 #. Tag: para
@@ -405,7 +405,7 @@ msgstr "Ważne"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Pole \"Ważne\" przedstawiają szczegóły, które mogłyby zostać łatwo "
