--- a/publican/datadir/Common_Content/common/pt-BR/Conventions.po
+++ b/publican/datadir/Common_Content/common/pt-BR/Conventions.po
@@ -117,14 +117,14 @@ msgstr "Pressione <keycap>Enter</keycap> para executar o comando."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Pressione <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Pressione <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> para mudar para o primeiro terminal virtual. Pressione "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> para voltar para sua sessão do  X-Windows."
 
 #. Tag: para
@@ -402,7 +402,7 @@ msgstr "Importante"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Caixas importantes detalham coisas que são geralmente fáceis de passarem "
