--- a/publican/datadir/Common_Content/common/ru-RU/Conventions.po
+++ b/publican/datadir/Common_Content/common/ru-RU/Conventions.po
@@ -71,8 +71,8 @@ msgstr "Нажмите <keycap>Enter</keycap> для исполнения ком
 
 #. Tag: para
 #, no-c-format
-msgid "Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> to switch to the first virtual terminal. Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> to return to your X-Windows session."
-msgstr "Нажмите <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> для перехода в первый виртуальный терминал. Нажмите <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> , чтобы вернуться в сессию X-Windows."
+msgid "Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo> to switch to the first virtual terminal. Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> to return to your X-Windows session."
+msgstr "Нажмите <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo> для перехода в первый виртуальный терминал. Нажмите <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> , чтобы вернуться в сессию X-Windows."
 
 #. Tag: para
 #, no-c-format
@@ -186,7 +186,7 @@ msgstr "Важно"
 
 #. Tag: para
 #, no-c-format
-msgid "Important boxes detail things that are easily missed: configuration changes that only apply to the current session, or services that need restarting before an update will apply. Ignoring a box labeled 'Important' won't cause data loss but may cause irritation and frustration."
+msgid "Important boxes detail things that are easily missed: configuration changes that only apply to the current session, or services that need restarting before an update will apply. Ignoring a box labeled 'Important' will not cause data loss but may cause irritation and frustration."
 msgstr "На информацию, отмеченную как важную, следует обратить особое внимание. Она может включать изменения настроек текущего сеанса или, например, перечень служб, которые нужно запустить, прежде чем обновления вступят в силу. Ознакомление с важной информацией значительно облегчит вашу работу."
 
 #. Tag: title
