--- a/publican/datadir/Common_Content/common/sr-Latn-RS/Conventions.po
+++ b/publican/datadir/Common_Content/common/sr-Latn-RS/Conventions.po
@@ -116,14 +116,14 @@ msgstr "Pritisnite <keycap>Enter</keycap> za izvršavanje naredbe."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Pritisnite <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> za prebacivanje u prvi virtuelni terminal. Pritisnite "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> za vraćanje u X-Windows sesiju."
 
 #. Tag: para
@@ -404,7 +404,7 @@ msgstr "Važno"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Važni okviri detaljno opisuju stvari koje se lako previde: izmene u "
