--- a/publican/datadir/Common_Content/common/sv-SE/Conventions.po
+++ b/publican/datadir/Common_Content/common/sv-SE/Conventions.po
@@ -116,14 +116,14 @@ msgstr "Tryck <keycap>Retur</keycap> för att utföra kommandot."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Tryck <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Tryck <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> för att byta till den första virtuella terminalen.  Tryck "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> för att återvända till din X-fönstersession."
 
 #. Tag: para
@@ -398,7 +398,7 @@ msgstr "Viktigt"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Viktiga rutor ger detaljer om saker som lätt missas: konfigurationsändringar "
