--- a/publican/datadir/Common_Content/common/ta-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/ta-IN/Conventions.po
@@ -114,14 +114,14 @@ msgstr "<keycap>Enter</keycap>ஐ அழுத்தி கட்டளையை
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></"
 "keycombo> ஐ அழுத்தி முதல் மெய்நிகர் முனையத்திற்கு மாற்றவும். <keycombo><keycap>Ctrl</"
-"keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> ஐ அழுத்தி X-Windows "
+"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> ஐ அழுத்தி X-Windows "
 "அமர்வுக்குத் திரும்பவும். "
 
 #. Tag: para
@@ -398,7 +398,7 @@ msgstr "முக்கியமானது"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "முக்கியமான பெட்டிகள் விவர பொருட்கள் எளிதாக விடுப்பட்டது: கட்டமைப்பு மாற்றங்கள் மட்டுமே "
