--- a/publican/datadir/Common_Content/common/te-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/te-IN/Conventions.po
@@ -113,14 +113,14 @@ msgstr "ఆదేశమును నిర్వర్తించుటకు <
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
 "మొదటి వర్చువల్ యంత్రమునకు మారుటకు <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
-"keycap><keycap>F1</keycap></keycombo>ను వత్తుము. మీ X-Windows సెషన్‌కు తిరిగివచ్చుటకు "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"keycap><keycap>F2</keycap></keycombo>ను వత్తుము. మీ X-Windows సెషన్‌కు తిరిగివచ్చుటకు "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo>ను వత్తుము."
 
 #. Tag: para
@@ -385,7 +385,7 @@ msgstr "ముఖ్యమైన"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "సులువుగా తప్పిపోవు విషయాలను ముఖ్య పేటికలు వివరిస్తాయి: ప్రస్తుత సెషన్‌కు మాత్రమే ఆపాదించు ఆకృతీకరణ "
