--- a/publican/datadir/Common_Content/common/zh-CN/Conventions.po
+++ b/publican/datadir/Common_Content/common/zh-CN/Conventions.po
@@ -106,14 +106,14 @@ msgstr "按 <keycap>Enter</keycap> 执行该命令。"
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"按 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
+"按 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></"
 "keycombo> 切换到第一个虚拟终端。<keycombo><keycap>Ctrl</keycap><keycap>Alt</"
-"keycap><keycap>F7</keycap></keycombo> 返回您的 X-Windows 会话。"
+"keycap><keycap>F1</keycap></keycombo> 返回您的 X-Windows 会话。"
 
 #. Tag: para
 #, no-c-format
@@ -369,7 +369,7 @@ msgstr "重要"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "重要框中的内容是那些容易错过的事情：配置更改只可用于当前会话，或者在应用更新"
