--- a/publican/datadir/Common_Content/common/zh-TW/Conventions.po
+++ b/publican/datadir/Common_Content/common/zh-TW/Conventions.po
@@ -96,12 +96,12 @@ msgstr "請按下 <keycap>Enter</keycap> 來執行指令。"
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"請按下 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> 來切換至第一個虛擬終端機。按下 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> 來返回您的 X-"
+"請按下 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo> 來切換至第一個虛擬終端機。按下 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> 來返回您的 X-"
 "Windows session。"
 
 #. Tag: para
@@ -312,7 +312,7 @@ msgstr "重點"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr "重點方塊會將容易遺漏掉的項目詳細列出：只對應於當下 session 的配置變更，或是某些要套用更新前必須將之重新啟用的服務。倘若您忽略掉重點方塊，雖然不會造成資料遺失，不過卻會造成工作上的不便與其它影響。"
 
