--- a/publican/datadir/Common_Content/common/ar-SA/Conventions.po
+++ b/publican/datadir/Common_Content/common/ar-SA/Conventions.po
@@ -111,14 +111,14 @@ msgstr "اضغط <keycap>ENTER</keycap> لتنفيذ الأمر."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"اضغط  ‪<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"اضغط  ‪<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo>‬ للتبديل إلى الطرفية الافتراضية الاولى. "
-"اضغط ‪<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"اضغط ‪<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo>‬ للعودة إلى جلسة نظام نوافذ إكس."
 
 #. Tag: para
@@ -384,7 +384,7 @@ msgstr "مهم"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "الصناديق المهمة  تفصل أشياء يخطؤ من يغفلها كان يكون التغيير لا ينطبق إلا على "
