--- a/publican/datadir/Common_Content/common/ca-ES/Conventions.po
+++ b/publican/datadir/Common_Content/common/ca-ES/Conventions.po
@@ -118,14 +118,14 @@ msgstr "Premeu <keycap>Enter</keycap> per a executar la comanda."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Premeu <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Premeu <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> per a triar el primer terminal virtual. Premeu "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> per a tornar a la vostra sessió X-Windows."
 
 #. Tag: para
@@ -406,7 +406,7 @@ msgstr "Important"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Podeu pasar per alt detalls dels requadres importats: canvis a la "
