--- a/publican/datadir/Common_Content/common/cs-CZ/Conventions.po
+++ b/publican/datadir/Common_Content/common/cs-CZ/Conventions.po
@@ -115,14 +115,14 @@ msgstr "Příkaz spusťe stisknutím<keycap>Enter</keycap> ."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Stiskněte <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Stiskněte <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> pro přepnutí na první virtuální terminál. Stisknutím "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> se pak vrátíte do prostředí X-Windows."
 
 #. Tag: para
@@ -397,7 +397,7 @@ msgstr "Důležité"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Okna Důležité obsahují detaily, které je někdy snadné přehlédnout. Například "
