--- a/publican/datadir/Common_Content/common/he-IL/Conventions.po
+++ b/publican/datadir/Common_Content/common/he-IL/Conventions.po
@@ -113,14 +113,14 @@ msgstr "יש להקיש <keycap>Enter</keycap> לביצוע הפקודה."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"יש להקיש <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"יש להקיש <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> כדי לעבור למסוף הווירטואלי הראשון. נא להקיש "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> לצורך חזרה לסביבת העבודה הגרפית."
 
 #. Tag: para
@@ -382,7 +382,7 @@ msgstr "שימו לב"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "תיבות \"שימו לב\" מציינות נושאים שקל להחמיץ: שינויי תצורה שלא ישמרו לפעם "
