--- a/publican/datadir/Common_Content/common/lv-LV/Conventions.po
+++ b/publican/datadir/Common_Content/common/lv-LV/Conventions.po
@@ -115,14 +115,14 @@ msgstr "Nospiediet <keycap>Enter</keycap> lai izpildīt komandu."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Nospiediet <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Nospiediet <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> lai pārslēgtiet pie pirma virtuāla termināla. Nospiediet "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> lai atgriezties X-Windows sesijā."
 
 #. Tag: para
@@ -397,7 +397,7 @@ msgstr "Svarīgs"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Svarīgas kastītes satur lietas, ko viegli nepamanīt: konfigurācijas "
