--- a/publican/datadir/Common_Content/common/pt-PT/Conventions.po
+++ b/publican/datadir/Common_Content/common/pt-PT/Conventions.po
@@ -119,14 +119,14 @@ msgstr "Carregue em <keycap>Enter</keycap> para executar o comando."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Carregue em <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Carregue em <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> para alternar para o primeiro terminal virtual. Carregue "
-"em <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"em <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> para regressar à sessão X-Windows."
 
 #. Tag: para
@@ -414,7 +414,7 @@ msgstr "Importante"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Caixas importantes chamam a atenção para coisas que são geralmente fáceis de "
