--- a/publican/datadir/Common_Content/common/sk-SK/Conventions.po
+++ b/publican/datadir/Common_Content/common/sk-SK/Conventions.po
@@ -115,14 +115,14 @@ msgstr "Na vykonanie príkazu stlačte <keycap>Enter</keycap>."
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Stlačte <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Stlačte <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> na prepnutie do prvého virtuálneho terminálu. Stlačte "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> pre návrat do vašej relácie X-Windows."
 
 #. Tag: para
@@ -398,7 +398,7 @@ msgstr "Dôležité"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "Kolónka 'Dôležité' vymenúva ľahko prehliadnuteľné veci: zmeny nastavení, "
