--- a/publican/datadir/Common_Content/common/uk-UA/Conventions.po
+++ b/publican/datadir/Common_Content/common/uk-UA/Conventions.po
@@ -118,15 +118,15 @@ msgstr "Щоб виконати команду, натисніть <keycap>Enter
 #. Tag: para
 #, no-c-format
 msgid ""
-"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</"
 "keycap></keycombo> to switch to the first virtual terminal. Press "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
 "Для перемикання на перший віртуальний термінал натисніть "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></"
 "keycombo>. Щоб повернутись до вікна сеансу X-Window, натисніть "
-"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></"
 "keycombo>."
 
 #. Tag: para
@@ -405,7 +405,7 @@ msgstr "Важливо"
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
-"before an update will apply. Ignoring a box labeled 'Important' won't cause "
+"before an update will apply. Ignoring a box labeled 'Important' will not cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
 "На інформацію, що позначена важливою, слід звернути увагу. Вона може "
