--- a/publican-redhat/si-LK/Feedback.po
+++ b/publican-redhat/si-LK/Feedback.po
@@ -4,10 +4,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-02-26 01:23+0000\n"
+"POT-Creation-Date: 2010-08-06T02:45:30\n"
 "PO-Revision-Date: 2007-10-30 15:16+0530\n"
 "Last-Translator: Danishka Navin <snavin@redhat.com>\n"
 "Language-Team: Sinhala <en@li.org>\n"
+"Language: si\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,147 +21,70 @@ msgid "Getting Help and Giving Feedback"
 msgstr ""
 
 #. Tag: title
-#: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
 msgstr ""
 
-#. Tag: primary
-#: Feedback.xml:10
+#. Tag: indexterm
 #, no-c-format
-msgid "help"
-msgstr ""
-
-#. Tag: secondary
-#: Feedback.xml:11
-#, no-c-format
-msgid "getting help"
+msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr ""
 
 #. Tag: para
-#: Feedback.xml:13
 #, no-c-format
-msgid ""
-"If you experience difficulty with a procedure described in this "
-"documentation, you can find help in the following ways:"
-msgstr ""
-
-#. Tag: term
-#: Feedback.xml:18
-#, no-c-format
-msgid "Red Hat Knowledgebase"
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
 msgstr ""
 
 #. Tag: para
-#: Feedback.xml:20
 #, no-c-format
-msgid ""
-"Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
-"ulink> to search or browse through technical support articles about Red Hat "
-"products."
-msgstr ""
-
-#. Tag: term
-#: Feedback.xml:26
-#, no-c-format
-msgid "Red Hat Global Support Services"
+msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
 msgstr ""
 
 #. Tag: para
-#: Feedback.xml:28
 #, no-c-format
-msgid ""
-"Your Red Hat subscription entitles you to support from Red Hat Global "
-"Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
-"ulink> for more information about obtaining help from GSS."
-msgstr ""
-
-#. Tag: term
-#: Feedback.xml:34
-#, no-c-format
-msgid "Other Red Hat documentation"
+msgid "submit a support case to Red Hat Global Support Services (GSS)."
 msgstr ""
 
 #. Tag: para
-#: Feedback.xml:36
 #, no-c-format
-msgid ""
-"Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
-"\"></ulink>"
-msgstr ""
-
-#. Tag: term
-#: Feedback.xml:42
-#, no-c-format
-msgid "Red Hat electronic mailing lists"
+msgid "access other product documentation."
 msgstr ""
 
 #. Tag: para
-#: Feedback.xml:44
 #, no-c-format
-msgid ""
-"Red Hat hosts a large number of electronic mailing lists for discussion of "
-"Red Hat software and technology. You can find a list of publicly available "
-"lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
-"Click on the name of any list to subscribe to that list or to access the "
-"list archives."
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr ""
 
 #. Tag: title
-#: Feedback.xml:53
 #, no-c-format
 msgid "We Need Feedback!"
 msgstr "අපට ප්‍රථිචාර අවශ්‍යයි!"
 
-#. Tag: primary
-#: Feedback.xml:55
+#. Tag: indexterm
 #, no-c-format
-msgid "feedback"
-msgstr "ප්‍රථිචාරය"
-
-#. Tag: secondary
-#: Feedback.xml:56
-#, no-c-format
-msgid "contact information for this manual"
-msgstr "මෙම අත්පොත සඳහා සම්බන්ධතා තොරතුරු"
-
-#. Tag: para
-#: Feedback.xml:58
-#, no-c-format
-msgid ""
-"If you find a typographical error in this manual, or if you have thought of "
-"a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"\">http://bugzilla.redhat.com/</ulink> against the product "
-"<application>&PRODUCT;.</application>"
+msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
 msgstr ""
-"මෙම අත්පොතේ මුද්‍රණ දෝෂයක් ඔබට හමුවුවහොත් හෝ මෙම අත්පොත් වඩා ගුණාත්මක ලෙස සැකසීමට අදහසක් "
-"ඇතිවුවහොත් ඔබගේ අදහස් සදාරයෙන් පිළිගන්නෙමු! කරුණාකර Bugzilla තුළ වාර්තාවක් ලබාදෙන්න: "
-"<application>&PRODUCT;.</application> වෙනුවෙන් <ulink url=\"http://bugzilla."
-"redhat.com/\">http://bugzilla.redhat.com/</ulink>"
 
 #. Tag: para
-#: Feedback.xml:61
+#, no-c-format
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+msgstr "මෙම අත්පොතේ මුද්‍රණ දෝෂයක් ඔබට හමුවුවහොත් හෝ මෙම අත්පොත් වඩා ගුණාත්මක ලෙස සැකසීමට අදහසක් ඇතිවුවහොත් ඔබගේ අදහස් සදාරයෙන් පිළිගන්නෙමු! කරුණාකර Bugzilla තුළ වාර්තාවක් ලබාදෙන්න: <application>&PRODUCT;.</application> වෙනුවෙන් <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>"
+
+#. Tag: para
 #, fuzzy, no-c-format
-msgid ""
-"When submitting a bug report, be sure to mention the manual&#39;s "
-"identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr ""
-"දෝෂ වාර්තාවක් ලබාදිමේදි අත්පොත් හදුනාගැනීම සඳහන් කිරීමට සැළකිළිමත් වන්න: <citetitle>&BOOKID;"
-"</citetitle>"
+msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+msgstr "දෝෂ වාර්තාවක් ලබාදිමේදි අත්පොත් හදුනාගැනීම සඳහන් කිරීමට සැළකිළිමත් වන්න: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
-#: Feedback.xml:64
 #, no-c-format
-msgid ""
-"If you have a suggestion for improving the documentation, try to be as "
-"specific as possible when describing it. If you have found an error, please "
-"include the section number and some of the surrounding text so we can find "
-"it easily."
-msgstr ""
-"මෙම ප්‍රලේඛනය දියුණු කිරීම සඳහා ඔබට යෝජනා ඇත්නම් එය විස්තර කිරීමෙදි හැකිතරම් විශේෂිතව දැක්වීමට "
-"උත්සාහ කරන්න. ඔබට දෝෂයක් හමුවුවහොත් කරුණාකර අංශයේ අංකය සහ අදාලා පෙදෙසේ වචන ස්වල්පයක් "
-"එක්කරන්න, එවිට අපහට එය පහසුවෙන් හදුනා ගත හැක."
+msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+msgstr "මෙම ප්‍රලේඛනය දියුණු කිරීම සඳහා ඔබට යෝජනා ඇත්නම් එය විස්තර කිරීමෙදි හැකිතරම් විශේෂිතව දැක්වීමට උත්සාහ කරන්න. ඔබට දෝෂයක් හමුවුවහොත් කරුණාකර අංශයේ අංකය සහ අදාලා පෙදෙසේ වචන ස්වල්පයක් එක්කරන්න, එවිට අපහට එය පහසුවෙන් හදුනා ගත හැක."
+
+#~ msgid "feedback"
+#~ msgstr "ප්‍රථිචාරය"
+
+#~ msgid "contact information for this manual"
+#~ msgstr "මෙම අත්පොත සඳහා සම්බන්ධතා තොරතුරු"
 
 #~ msgid "translator-credits"
 #~ msgstr "Danishka Navin"
